[package]
name = "yml_to_ron"
version = "0.1.0"
authors = ["Neil <neilhube12@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name="yron"
path="src/main.rs"

[dependencies]
ron = "0.6.4"
yaml-rust = "0.4"
linked-hash-map = {version="0.5.3", features=["serde_impl"]}
serde = { version = "1.0.60", features = ["serde_derive"] }